updated sidebar style

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -25,7 +25,7 @@
           <!-- begin field site -->
       <ul class="nav nav-fill p-1" role="tablist">
           <li class="nav-item mt-2 col-8">
-            <h6 class="text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
+            <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
           </li>
             {% if perms.field_site.view_fieldsite %}
             <li class="nav-item col-1">
@@ -53,7 +53,7 @@
         {% if perms.sample_label %}
       <ul class="nav nav-fill p-1" role="tablist">
         <li class="nav-item mt-2 col-8">
-          <h6 class="text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Sample Labels</h6>
+          <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Sample Labels</h6>
         </li>
         {% if perms.sample_label.view_samplelabelrequest %}
          <li class="nav-item col-1">
