updated form enctype to include multipart/form-data for file uploads

--- a/frontend/templates/includes/django-material-dashboard/form.html
+++ b/frontend/templates/includes/django-material-dashboard/form.html
@@ -5,7 +5,7 @@
 {% endif %}
 <!-- END FORM ERRORS -->
 <!-- START FORM -->
-<form method="post" class="p-3" id="contact-form" >
+<form method="post" enctype="multipart/form-data" class="p-3">
   {% csrf_token %}
   <div class="card-body pt-1">
       {% for field in form %}
