--- a/frontend/templates/home/django-material-dashboard/field-update-popup.html
+++ b/frontend/templates/home/django-material-dashboard/field-update-popup.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
 {% load static %}
 
-{% block title %} Add Popup {% endblock %}
+{% block title %} Update Popup {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
