--- a/frontend/templates/home/django-material-dashboard/field-add-popup.html
+++ b/frontend/templates/home/django-material-dashboard/field-add-popup.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
 {% load static %}
 
-{% block title %} Sign up {% endblock %}
+{% block title %} Add Popup {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -22,58 +22,11 @@
               <div class="card card-plain">
                 <div class="card-header">
                   <h4 class="font-weight-bolder">
-                    Metadata Dashboard
+                    {{ page_title|title }}
                   </h4>
-                  <p class="mb-0">
-                    {% if msg %}
-                      <span class="text-danger">{{ msg | safe }}</span>
-                    {% else %}
-                      Enter your email and password to register
-                    {% endif %}                    
-                  </p>
                 </div>
                 <div class="card-body">
-                  <form role="form" method="post" action="">
-
-                    {% csrf_token %} 
-
-                    <div class="input-group input-group-outline mb-3">
-                      {{ form.username }}
-                    </div>
-                    <span class="text-danger">{{ form.username.errors }}</span>
-
-                    <div class="input-group input-group-outline mb-3">
-                      {{ form.email }}
-                    </div>
-                    <span class="text-danger">{{ form.email.errors }}</span>
-
-                    <div class="input-group input-group-outline mb-3">
-                      {{ form.password1 }}
-                    </div>
-                    <span class="text-danger">{{ form.password1.errors }}</span>
-
-                    <div class="input-group input-group-outline mb-3">
-                      {{ form.password2 }}
-                    </div>
-                    <span class="text-danger">{{ form.password2.errors }}</span>
-
-                    <div class="form-check form-check-info text-start ps-0">
-                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
-                      <label class="form-check-label" for="flexCheckDefault">
-                        I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
-                      </label>
-                    </div>
-                    <div class="text-center">
-                      <button type="submit" name="register" 
-                              class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Sign Up</button>
-                    </div>
-                  </form>
-                </div>
-                <div class="card-footer text-center pt-0 px-lg-2 px-1">
-                  <p class="mb-2 text-sm mx-auto">
-                    Already have an account?
-                    <a href="{% url 'dashboard_login' %}" class="text-primary text-gradient font-weight-bold">Sign in</a>
-                  </p>
+                    {% include 'includes/django-material-dashboard/form.html' %}
                 </div>
               </div>
             </div>
