--- a/frontend/templates/includes/django-material-dashboard/form.html
+++ b/frontend/templates/includes/django-material-dashboard/form.html
@@ -1,4 +1,4 @@
-
+{% load html_tags %}
 <!-- START FORM ERRORS -->
 {% if form.non_field_errors %}
 <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ form.non_field_errors }}</div>
@@ -12,7 +12,9 @@
    <div class="row">
        {{ field.errors }}
        {{ field.label_tag }}
-       <div class="input-group input-group-outline my-3">
+
+       <div class="{% if form.field_name|field_type = CustomRadioSelect %}form-check form-check-inline{% else %}input-group input-group-outline my-3{% endif %}">
+
         {{ field }}
        </div>
        {% if field.help_text %}
