--- a/frontend/templates/includes/django-material-dashboard/form.html
+++ b/frontend/templates/includes/django-material-dashboard/form.html
@@ -12,9 +12,7 @@
    <div class="row">
        {{ field.errors }}
        {{ field.label_tag }}
-
-       <div class="{% if field.field.widget|field_type == CustomRadioSelect %}form-check form-check-inline{% else %}input-group input-group-outline my-3{% endif %}">
-        {{ field.field.widget|field_type }}
+       <div class="{% if field.field.widget|field_type == 'CustomRadioSelect' %}form-check form-check-inline{% else %}input-group input-group-outline my-3{% endif %}">
         {{ field }}
        </div>
        {% if field.help_text %}
