updated form and custom_widget fields

--- a/frontend/templates/custom_forms/widgets/input_option.html
+++ b/frontend/templates/custom_forms/widgets/input_option.html
@@ -1,4 +1,4 @@
 {% if widget.wrap_label %}
-<label{% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %} class="custom-control-label">
+<label{% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %} class="form-check-label">
 {% endif %}{% include "custom_forms/widgets/input.html" %}{% if widget.wrap_label %} {{ widget.label }}
 </label>{% endif %}
