--- a/frontend/templates/custom_forms/widgets/multiple_input.html
+++ b/frontend/templates/custom_forms/widgets/multiple_input.html
@@ -1,10 +1,8 @@
 {% with id=widget.attrs.id %}
 <div{% if id %} id="{{ id }}"{% endif %}{% if widget.attrs.class %} class="{{ widget.attrs.class }}"{% endif %}>
 {% for group, options, index in widget.optgroups %}{% if group %}
-  <div>
-    <label class="custom-control-label">{{ group }}</label>{% endif %}{% for option in options %}
-    <div>
-    {% include option.template_name with widget=option %}
-    </div>{% endfor %}{% if group %}
-  </div>{% endif %}{% endfor %}
+<label class="form-check-label">{{ group }}</label>{% endif %}{% for option in options %}
+{% include option.template_name with widget=option %}
+{% endfor %}{% if group %}
+{% endif %}{% endfor %}
 </div>{% endwith %}
