updated frontend templates

--- a/frontend/templates/custom_forms/widgets/input_option.html
+++ b/frontend/templates/custom_forms/widgets/input_option.html
@@ -1,5 +1,5 @@
 {% if widget.wrap_label %}
-<div class="col-auto"></div>
+<div class="col-auto">
 <label{% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %} class="form-check-label">
 {% endif %}
 {% if widget.wrap_label %}
