--- a/frontend/templates/includes/django-material-dashboard/contact-us-timeline.html
+++ b/frontend/templates/includes/django-material-dashboard/contact-us-timeline.html
@@ -8,7 +8,7 @@
             {% if field.created_season == 1 %}ac_unit{% endif %}{% if field.created_season == 2 %}emoji_nature{% endif %}{% if field.created_season == 3 %}brightness_low{% endif %}{% if field.created_season == 4 %}energy_savings_leaf{% endif %}</i>
       </span>
       <div class="timeline-content">
-        <h6 class="text-dark text-sm font-weight-bold mb-0">{{ field.created_datetime|date:"M d Y"}} {{ field.created_datetime|time:"h:iA"}}</h6>
+        <h6 class="text-dark text-sm font-weight-bold mb-0">{{ field.created_datetime|date:"M d Y"}} @ {{ field.created_datetime|time:"h:iA"}}</h6>
           <p class="text-secondary font-weight-bold text-xs mt-1 mb-0"><a href="mailto:" class="text-dark text-xs mt-1 mb-0">{{ field.contact_email }}</a>: {{ field.contact_context }}</p>
       </div>
     </div>
