--- a/frontend/templates/includes/django-material-dashboard/contact-us-timeline.html
+++ b/frontend/templates/includes/django-material-dashboard/contact-us-timeline.html
@@ -12,8 +12,9 @@
           <p class="text-secondary font-weight-bold text-xs mt-1 mb-0"><span class="text-dark text-xs mt-1 mb-0">{{ field.contact_email }}</span>: {{ field.contact_context }}</p>
       </div>
     </div>
+    </a>
 {% endfor %}
-</div></a>
+</div>
 {% else %}
 <p class="lead">No results are available.</p>
 {% endif %}
