updated daypart icons in contact-us-timeline

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -318,10 +318,10 @@
             <div class="card-header pb-0">
               <div class="row">
                 <div class="col-lg-6 col-7">
-                  <h6>Metadata ToDo</h6>
+                  <h6>Metadata Todo</h6>
                   <p class="text-sm mb-0">
                     <i class="fa fa-check text-info" aria-hidden="true"></i>
-                    <span class="font-weight-bold ms-1">30 done</span> to date
+                    <span class="font-weight-bold ms-1">30 complete</span> to date
                   </p>
                 </div>
                 <div class="col-lg-6 col-5 my-auto text-end">
@@ -346,10 +346,10 @@
         <div class="col-lg-4 col-md-6">
           <div class="card h-100">
             <div class="card-header pb-0">
-              <h6>Contact overview</h6>
+              <h6>Contact Us Overview</h6>
               <p class="text-sm">
-                <i class="fa fa-arrow-up text-success" aria-hidden="true"></i>
-                <span class="font-weight-bold">24%</span> this month
+                <i class="fa fa-user text-success" aria-hidden="true"></i>
+                <span class="font-weight-bold">24</span> requests this month
               </p>
             </div>
 
