--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -343,23 +343,22 @@
             </div>
           </div>
         </div>
+        {% if user.is_active and user.is_staff %}
         <div class="col-lg-4 col-md-6">
           <div class="card h-100">
             <div class="card-header pb-0">
               <h6>Contact Us Overview</h6>
               <p class="text-sm">
                 <i class="fa fa-user text-success" aria-hidden="true"></i>
-                <span class="font-weight-bold">24</span> requests this month
+                <span class="font-weight-bold">1</span> requests this month
               </p>
             </div>
-
             <div class="card-body p-3">
-
               {% include 'includes/django-material-dashboard/contact-us-timeline.html' %}
-
             </div>
           </div>
         </div>
+        {% endif %}
       </div>
 
       {% include 'includes/django-material-dashboard/footer.html' %}
