--- a/frontend/templates/includes/django-material-dashboard/contact-us-timeline.html
+++ b/frontend/templates/includes/django-material-dashboard/contact-us-timeline.html
@@ -2,9 +2,10 @@
 
 <div class="timeline timeline-one-side">
 {% for field in contactus_list %}
-    <a href="mailto:{{ field.contact_email }}?subject=Re: {{ field.contact_context }}">
+    <a href="{% url 'update_contactus' {{field.pk}} %} ">
         <div class="timeline-block mb-3">
             <span class="timeline-step">
+                <i class="{% if field.replied == 'yes' %}fa fa-check text-Success text-gradient {% endif %}{% if field.replied == 'no' %}fa fa-times text-danger text-gradient {% endif %}"></i>
                 <i class="{% if field.created_daypart == 1 %}fa fa-moon text-info text-gradient {% endif %}{% if field.created_daypart == 2 %}fa fa-sun-o text-secondary {% endif %}{% if field.created_daypart == 3 %}fa fa-sun text-warning text-gradient {% endif %}{% if field.created_daypart == 4 %}fa fa-moon-o text-secondary {% endif %}"></i>
             </span>
             <div class="timeline-content">
@@ -17,4 +18,6 @@
 </div>
 {% else %}
 <p class="lead">No results are available.</p>
+
+"mailto:{{ field.contact_email }}?subject=Re: {{ field.contact_context }}"
 {% endif %}
