added replied count to response

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -350,7 +350,7 @@
               <h6>Contact Us Overview</h6>
               <p class="text-sm">
                 <i class="fa fa-user text-success" aria-hidden="true"></i>
-                <span class="font-weight-bold">1</span> request(s) this month
+                <span class="font-weight-bold">{{ replied_count }}</span> replies to date
               </p>
             </div>
             <div class="card-body p-3">
