fixed reverse success_url to include pk for contactus

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -321,7 +321,7 @@
                   <h6>Metadata Todo</h6>
                   <p class="text-sm mb-0">
                     <i class="fa fa-check text-info" aria-hidden="true"></i>
-                    <span class="font-weight-bold ms-1">30 complete</span> to date
+                    <span class="font-weight-bold ms-1">{{ return_metadata_count }} complete</span> to date
                   </p>
                 </div>
                 <div class="col-lg-6 col-5 my-auto text-end">
