--- a/frontend/templates/home/django-material-dashboard/contact-us-detail.html
+++ b/frontend/templates/home/django-material-dashboard/contact-us-detail.html
@@ -40,10 +40,10 @@
                       <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Replied Context:</strong> &nbsp; {{ object.replied_context }}</li>
                       <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Replied DateTime:</strong> &nbsp; {{ object.replied_datetime|date:"M d Y"}} @ {{ object.replied_datetime|time:"h:iA"}}</li>
                   </ul>
-                    <a href="mailto:{{ object.contact_email }}?subject=Re: {{ object.contact_context }}&body={{ object.replied_context }}"
-                       class="btn btn-secondary btn-lg w-100" role="button">
-                        <span class="btn-inner--icon"><i class="material-icons">email</i></span>Send Email</a>
                 </div>
+                  <a href="mailto:{{ object.contact_email }}?subject=Re: {{ object.contact_context }}&body={{ object.replied_context }}"
+                     class="btn btn-secondary btn-lg w-100" role="button"><span class="btn-inner--icon"><i class="material-icons">email</i></span> Send Email
+                  </a>
               </div>
             </div>
           </div>
