--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -320,7 +320,7 @@
                 <div class="col-lg-6 col-7">
                   <h6>Metadata Todo</h6>
                   <p class="text-sm mb-0">
-                    <i class="fa fa-check text-info" aria-hidden="true"></i>
+                    <i class="fa fa-check text-success" aria-hidden="true"></i>
                     <span class="font-weight-bold ms-1">{{ return_metadata_count }} complete</span> to date
                   </p>
                 </div>
