Added load form.media in form.html for frontend templates

--- a/frontend/templates/includes/django-material-dashboard/form.html
+++ b/frontend/templates/includes/django-material-dashboard/form.html
@@ -1,3 +1,7 @@
+{% block extrahead %}
+    {{ form.media }}
+{% endblock %}
+
 {% load html_tags %}
 <!-- START FORM ERRORS -->
 {% if form.non_field_errors %}
