added jquery to scripts for default load in templates

--- a/frontend/templates/includes/django-material-kit/scripts.html
+++ b/frontend/templates/includes/django-material-kit/scripts.html
@@ -20,5 +20,10 @@
 <!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
 <script src="{% static 'assets/js/plugins/parallax.min.js' %}"></script>
 
+<!-- Plugin for jQuery 3.4.1 -->
+<script src="{% static 'assets/js/plugins/jquery-3.4.1.min.js' %}"></script>
+
 <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
 <script src="{% static 'assets/js/material-kit.min.js' %}" type="text/javascript"></script>
+
+
