readded jquery to index.html

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -368,6 +368,7 @@
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
+<script src="{% static 'assets/js/plugins/jquery-3.4.1.min.js' %}"></script>
 <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
 <script src="{% static 'assets/js/plugins/palette.js' %}"></script>
 <script src="{% static 'assets/js/charts-fieldsurvey.js' %}"></script>
