added missing load to template

--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -1,5 +1,6 @@
 {% extends "layouts/django-material-dashboard/base.html" %}
 {% load static %}
+{% load i18n %}
 {% load django_tables2 %}
 {% load custom_filter_list %}
 
