--- a/frontend/templates/home/django-material-dashboard/field-filter-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-filter-list.html
@@ -1,6 +1,5 @@
 {% extends "layouts/django-material-dashboard/base.html" %}
-{% load static %}
-{% load i18n %}
+{% load static i18n %}
 {% load django_tables2 %}
 {% load custom_filter_list %}
 
@@ -39,11 +38,11 @@
                   <form method="get" id="changelist-form" >
                     <h3> {{ filter.form.created_datetime.label_tag }} </h3>
                     <ul class="user-filter-created_datetime">
-                      <li>{% render_field filter.form.created_datetime class="form-control" %}</li>
+                      <li>{% filter.form.created_datetime %}</li>
                     </ul>
                     <h3> {{ filter.form.sample_year.label_tag }} </h3>
                     <ul class="user-filter-sample_year">
-                      <li>{% render_field filter.form.sample_year class="form-control" %}</li>
+                      <li>{% filter.form.sample_year %}</li>
                     </ul>
                     <h3> {{ filter.form.sample_material.label_tag }} </h3>
                     <ul class="user-filter-sample_material">
