updated frontend templates

--- a/frontend/templates/includes/django-material-dashboard/export-list.html
+++ b/frontend/templates/includes/django-material-dashboard/export-list.html
@@ -10,6 +10,6 @@
          href="{% export_url format %}">Export <code>.{{ format }}</code>
     </a>
   </li>
-  {% endfor %} #}
+  {% endfor %}
   </ul>
 </div>
